[package]
name = "aclneko"
version = "0.16.5"
edition = "2021"
homepage = "https://github.com/g1eng/aclneko"
repository = "https://github.com/g1eng/aclneko"
description = "caitsith policy abstract"
license = "MIT OR Apache-2.0"

[dependencies]
regex = "1.6.0"
serde = {version = "1.0.143", features = ["derive"]}
serde_json = "1.0.91"
